# demo_ci_cpython

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  lint.yml  mypy.yml  test.yml
src/myproject/: __init__.py  calculator.py  example.py
tests/: test-myproject.py  test_add.py  test_div.py  test_mul.py  test_sub.py
